--- a/dustland.html
+++ b/dustland.html
@@ -93,7 +93,7 @@
           <button class="btn" id="ccLoad">Load Game</button>
           <button class="btn" id="ccStart">Start Now</button>
           <button class="btn" id="ccBack">Back</button>
-          <button class="btn" id="ccNext">Next</button>
+          <button class="btn btn--primary" id="ccNext">Next</button>
         </div>
       </div>
     </div>
