--- a/ack-player.html
+++ b/ack-player.html
@@ -112,6 +112,10 @@
   </div>
 
   <script src="dustland-core.js"></script>
+  <script src="core/party.js"></script>
+  <script src="core/inventory.js"></script>
+  <script src="core/movement.js"></script>
+  <script src="core/dialog.js"></script>
   <script>
     window._realOpenCreator = window.openCreator;
     window.openCreator = function(){};
