Add healing items and editor support

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -278,7 +278,9 @@
           </div>
           <label>Equip<textarea id="itemEquip" rows="2"></textarea></label>
           <label>Value<input id="itemValue" type="number" min="0" /></label>
-          <label>Use<textarea id="itemUse" rows="2"></textarea></label>
+          <label>Use Type<select id="itemUseType"><option value="">(none)</option><option value="heal">Heal</option></select></label>
+          <label id="itemUseAmtWrap" style="display:none">Heal Amount<input id="itemUseAmount" type="number" min="1" /></label>
+          <label id="itemUseWrap">Use<textarea id="itemUse" rows="2"></textarea></label>
           <button class="btn" id="addItem">Add Item</button>
           <button class="btn" id="delItem" style="display:none">Delete Item</button>
         </div>
