Improve editor UX and dialog flow

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -205,11 +205,11 @@
     </section>
     <aside class="editor-panel" id="editorPanel" aria-hidden="false">
       <div class="tabs2" role="tablist" aria-label="Editors">
-        <button class="tab2 active" data-tab="npc" role="tab" aria-selected="true">NPCs</button>
-        <button class="tab2" data-tab="items" role="tab" aria-selected="false">Items</button>
-        <button class="tab2" data-tab="buildings" role="tab" aria-selected="false">Buildings</button>
-        <button class="tab2" data-tab="interiors" role="tab" aria-selected="false">Interiors</button>
-        <button class="tab2" data-tab="quests" role="tab" aria-selected="false">Quests</button>
+        <button class="tab2 active" type="button" data-tab="npc" role="tab" aria-selected="true">NPCs</button>
+        <button class="tab2" type="button" data-tab="items" role="tab" aria-selected="false">Items</button>
+        <button class="tab2" type="button" data-tab="buildings" role="tab" aria-selected="false">Buildings</button>
+        <button class="tab2" type="button" data-tab="interiors" role="tab" aria-selected="false">Interiors</button>
+        <button class="tab2" type="button" data-tab="quests" role="tab" aria-selected="false">Quests</button>
       </div>
       <div class="tabpanes">
         <fieldset class="card" id="npcCard" data-pane="npc">
