Revamp combat UI layout

--- a/ack-player.html
+++ b/ack-player.html
@@ -77,8 +77,13 @@
   <!-- Combat overlay -->
   <div class="overlay" id="combatOverlay" role="dialog" aria-modal="true">
     <div class="combat-window">
-      <div class="enemy-row" id="combatEnemies"></div>
-      <div class="party-row" id="combatParty"></div>
+      <div class="battlefield">
+        <div class="enemy-row" id="combatEnemies"></div>
+        <div class="party-row" id="combatParty"></div>
+      </div>
+      <div class="command-row">
+        <div class="cmd" id="combatCmd"></div>
+      </div>
     </div>
   </div>
 
