Allow flag-gated dialog choices in editor and core

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -380,6 +380,7 @@
       <div id="treeEditor"></div>
       <div id="treeWarning" style="color:#f66;font-size:12px;margin-top:4px"></div>
       <button class="btn" type="button" id="addNode">Add Node</button>
+      <datalist id="choiceFlagList"></datalist>
     </div>
   </div>
   <button id="playtestFloat" class="btn btn--primary" style="
