refactor: remove ES modules for file loading

--- a/ack-player.html
+++ b/ack-player.html
@@ -124,6 +124,16 @@
     </div>
   </div>
 
-  <script type="module" src="ack-player.js"></script>
+  <script defer src="./event-bus.js"></script>
+  <script defer src="./core/effects.js"></script>
+  <script defer src="./core/inventory.js"></script>
+  <script defer src="./core/movement.js"></script>
+  <script defer src="./core/dialog.js"></script>
+  <script defer src="./core/combat.js"></script>
+  <script defer src="./core/party.js"></script>
+  <script defer src="./dustland-core.js"></script>
+  <script defer src="./dustland-nano.js"></script>
+  <script defer src="./dustland-engine.js"></script>
+  <script defer src="./ack-player.js"></script>
 </body>
 </html>
