--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -405,7 +405,17 @@
     position:fixed; right:20px; bottom:20px; z-index:9999; border-radius:999px; padding:10px 14px;">
       ▶ Playtest
   </button>
-  <script type="module" src="adventure-kit.js"></script>
+  <script defer src="./event-bus.js"></script>
+  <script defer src="./core/effects.js"></script>
+  <script defer src="./core/inventory.js"></script>
+  <script defer src="./core/movement.js"></script>
+  <script defer src="./core/dialog.js"></script>
+  <script defer src="./core/combat.js"></script>
+  <script defer src="./core/party.js"></script>
+  <script defer src="./dustland-core.js"></script>
+  <script defer src="./dustland-nano.js"></script>
+  <script defer src="./dustland-engine.js"></script>
+  <script defer src="./adventure-kit.js"></script>
 </body>
 
 </html>
