fix: restore module select on startup

--- a/dustland.html
+++ b/dustland.html
@@ -122,5 +122,6 @@
   <script defer src="./dustland-core.js"></script>
   <script defer src="./dustland-nano.js"></script>
   <script defer src="./dustland-engine.js"></script>
+  <script defer src="./module-picker.js"></script>
 </body>
 </html>
