feat: add palette editors

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -310,9 +310,17 @@
         <div id="bldgEditor" style="display:none">
           <label>X<input id="bldgX" type="number" min="0" /></label>
           <label>Y<input id="bldgY" type="number" min="0" /></label>
+          <label>W<input id="bldgW" type="number" min="1" value="6" /></label>
+          <label>H<input id="bldgH" type="number" min="1" value="5" /></label>
+          <div id="bldgPalette">
+            <button type="button" data-tile="B" style="background:#fff"></button>
+            <button type="button" data-tile="D" style="background:#8bd98d"></button>
+            <button type="button" data-tile="E" style="background:#000"></button>
+          </div>
+          <canvas id="bldgCanvas" width="192" height="160" style="margin-top:4px"></canvas>
           <label>Interior<select id="bldgInterior"></select></label>
-          <button class="btn" id="addBldg">Place Hut</button>
-          <button class="btn" id="delBldg" style="display:none">Remove Hut</button>
+          <button class="btn" id="addBldg">Add Building</button>
+          <button class="btn" id="delBldg" style="display:none">Remove Building</button>
         </div>
       </fieldset>
       <fieldset class="card" id="intCard" data-pane="interiors" style="display:none">
@@ -321,6 +329,13 @@
         <button class="btn" type="button" id="newInterior">+ Interior</button>
         <div id="intEditor" style="display:none">
           <label>ID<input id="intId" readonly /></label>
+          <label>W<input id="intW" type="number" min="3" value="12" /></label>
+          <label>H<input id="intH" type="number" min="3" value="9" /></label>
+          <div id="intPalette">
+            <button type="button" data-tile="W" style="background:#444"></button>
+            <button type="button" data-tile="F" style="background:#222"></button>
+            <button type="button" data-tile="D" style="background:#8bd98d"></button>
+          </div>
           <canvas id="intCanvas" width="192" height="144" style="margin-top:4px"></canvas>
           <button class="btn" type="button" id="delInterior" style="display:none">Delete Interior</button>
         </div>
