--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -268,6 +268,7 @@
           <div id="dialogPreview" style="margin-top:6px"></div>
           <button class="btn" id="addNPC">Add NPC</button>
           <button class="btn" id="delNPC" style="display:none">Delete NPC</button>
+          <button class="btn" type="button" id="closeNPC">Done</button>
         </div>
       </fieldset>
       <fieldset class="card" id="itemCard" data-pane="items" style="display:none">
