feat: add settings panel for controls

--- a/dustland.html
+++ b/dustland.html
@@ -42,12 +42,24 @@
           <button class="btn" id="saveBtn">Save</button>
           <button class="btn" id="loadBtn">Load</button>
           <button class="btn" id="resetBtn">Reset</button>
-          <button class="btn" id="nanoToggle">Nano Dialog</button>
-          <button class="btn" id="audioToggle">Audio: On</button>
+          <button class="btn" id="settingsBtn">Settings</button>
         </div>
         </div>
       </aside>
     </div>
+  
+  <!-- Settings Panel -->
+  <div id="settings">
+    <div class="win">
+      <header>Settings</header>
+      <main>
+        <button class="btn" id="nanoToggle">Nano Dialog</button>
+        <button class="btn" id="audioToggle">Audio: On</button>
+        <button class="btn" id="mobileToggle">Mobile Controls: Off</button>
+        <button class="btn" id="settingsClose">Close</button>
+      </main>
+    </div>
+  </div>
 
   <!-- Start Menu -->
   <div id="start">
