feat: improve mobile layout and controls

--- a/dustland.html
+++ b/dustland.html
@@ -47,7 +47,9 @@
         </div>
       </aside>
     </div>
-  
+
+  <div id="panelToggle">☰</div>
+
   <!-- Settings Panel -->
   <div id="settings">
     <div class="win">
