feat: add road paint and terrain speed

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -199,8 +199,10 @@
           <button type="button" data-tile="1" style="background:#2c342c"></button>
           <button type="button" data-tile="2" style="background:#1573ff"></button>
           <button type="button" data-tile="3" style="background:#203320"></button>
+          <button type="button" data-tile="4" style="background:#777777"></button>
           <button type="button" data-tile="5" style="background:#304326"></button>
         </div>
+        <button class="btn" id="noiseToggle" style="margin-top:4px">Noise: On</button>
         <div class="controls">
         <button class="btn" id="regen">Generate World</button>
         <button class="btn btn--primary" id="save">Download Module</button>
