--- a/dustland.html
+++ b/dustland.html
@@ -111,7 +111,7 @@
       </header>
       <main>
         <div class="pbox">
-          <div class="p" id="ccPortrait">@</div>
+          <div class="p" id="ccPortrait"></div>
         </div>
         <div id="ccRight"></div>
       </main>
