feat: enhance combat interface

--- a/dustland.html
+++ b/dustland.html
@@ -97,6 +97,7 @@
         <div class="party-row" id="combatParty"></div>
       </div>
       <div class="command-row">
+        <div class="turn" id="turnIndicator"></div>
         <div class="cmd" id="combatCmd"></div>
       </div>
     </div>
