--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -205,6 +205,7 @@
         <button class="btn" id="noiseToggle" style="margin-top:4px">Noise: On</button>
         <div class="controls">
         <button class="btn" id="regen">Generate World</button>
+        <button class="btn" id="clear">Clear Map</button>
         <button class="btn btn--primary" id="save">Download Module</button>
         <button class="btn" id="load">Load Module</button>
         <button class="btn" id="setStart">Set Start</button>
