--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -72,8 +72,13 @@
       margin-top: 6px;
     }
 
-    #mapCard .controls {
-      text-align: center;
+    .btn-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 4px;
+      justify-content: center;
+      border: 1px solid #2b3b2b;
+      padding: 4px;
       margin-top: 8px;
     }
 
@@ -194,24 +199,26 @@
   <div class="ak-layout">
       <section class="card map-card" id="mapCard">
         <canvas id="map" width="640" height="480" aria-label="Map preview"></canvas>
-        <div id="worldPalette" style="margin-top:4px">
-          <button type="button" data-tile="0" style="background:#1e271d"></button>
-          <button type="button" data-tile="1" style="background:#2c342c"></button>
-          <button type="button" data-tile="2" style="background:#1573ff"></button>
-          <button type="button" data-tile="3" style="background:#203320"></button>
-          <button type="button" data-tile="4" style="background:#777777"></button>
-          <button type="button" data-tile="5" style="background:#304326"></button>
+        <div class="btn-group" id="paletteGroup">
+          <div id="worldPalette">
+            <button type="button" data-tile="0" style="background:#1e271d"></button>
+            <button type="button" data-tile="1" style="background:#2c342c"></button>
+            <button type="button" data-tile="2" style="background:#1573ff"></button>
+            <button type="button" data-tile="3" style="background:#203320"></button>
+            <button type="button" data-tile="4" style="background:#777777"></button>
+            <button type="button" data-tile="5" style="background:#304326"></button>
+          </div>
+          <button class="btn" id="noiseToggle">Noise: On</button>
+          <button class="btn" id="clear">Clear Map</button>
         </div>
-        <button class="btn" id="noiseToggle" style="margin-top:4px">Noise: On</button>
-        <div class="controls">
-        <button class="btn" id="regen">Generate World</button>
-        <button class="btn" id="clear">Clear Map</button>
-        <button class="btn btn--primary" id="save">Download Module</button>
-        <button class="btn" id="load">Load Module</button>
-        <button class="btn" id="setStart">Set Start</button>
-        <button class="btn btn--primary" id="playtest">Playtest</button>
-        <button class="btn" id="toggleEditor" aria-expanded="true">Hide Editor</button>
-      </div>
+        <div class="btn-group">
+          <button class="btn btn--primary" id="save">Download Module</button>
+          <button class="btn" id="load">Load Module</button>
+        </div>
+        <div class="btn-group">
+          <button class="btn" id="setStart">Set Start</button>
+          <button class="btn btn--primary" id="playtest">Playtest</button>
+        </div>
       <input type="file" id="loadFile" accept="application/json" style="display:none" />
     </section>
     <aside class="editor-panel" id="editorPanel" aria-hidden="false">
