feat: allow custom module filename

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -211,6 +211,8 @@
           <button class="btn" id="noiseToggle">Noise: On</button>
           <button class="btn" id="clear">Clear Map</button>
         </div>
+        <label for="moduleName">Module Name</label>
+        <input type="text" id="moduleName" />
         <div class="btn-group">
           <button class="btn btn--primary" id="save">Download Module</button>
           <button class="btn" id="load">Load Module</button>
