feat: switch ACK to sans-serif font hierarchy

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -11,7 +11,9 @@
       margin: 0;
       background: #000;
       color: #c8f7c9;
-      font-family: ui-monospace;
+      font-family: system-ui, sans-serif;
+      font-size: 14px;
+      line-height: 1.5;
       position: relative;
       min-height: 100vh;
     }
@@ -42,7 +44,7 @@
     }
 
     .list {
-      font-size: 12px;
+      font-size: 13px;
     }
 
     .list div {
@@ -64,12 +66,22 @@
       border: 1px solid #2b3b2b;
       color: #c8f7c9;
       font-family: inherit;
-      font-size: 12px;
+      font-size: 13px;
       border-radius: 4px;
     }
 
     button.btn {
       margin-top: 6px;
+      font-size: 14px;
+    }
+
+    .btn-group .btn {
+      font-size: 13px;
+    }
+
+    legend {
+      font-size: 16px;
+      font-weight: 600;
     }
 
     .btn-group {
