--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -232,6 +232,12 @@
               <button type="button" data-tile="5" style="background:#304326"></button>
               <button type="button" data-tile="6" style="background:#4d5f4d"></button>
             </div>
+            <div id="stampPalette">
+              <button type="button" data-stamp="hill">Hill</button>
+              <button type="button" data-stamp="cross">Cross Roads</button>
+              <button type="button" data-stamp="compound">Compound</button>
+              <button type="button" data-stamp="pond">Pond</button>
+            </div>
             <div id="paletteLabel"></div>
           </div>
           <button class="btn" id="noiseToggle">Noise: On</button>
