fix: style stamp button with icon

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -257,8 +257,8 @@
               <button type="button" data-tile="4" style="background:#777777"></button>
               <button type="button" data-tile="5" style="background:#304326"></button>
               <button type="button" data-tile="6" style="background:#4d5f4d"></button>
-              <button type="button" id="stampsBtn">Stamps</button>
             </div>
+            <button class="btn" type="button" id="stampsBtn" title="Stamps" aria-label="Stamps">🔖</button>
             <div id="stampWindow"></div>
             <div id="paletteLabel"></div>
           </div>
